@@ -1,5 +1,7 @@
 2004.01.19
 
+  Use _beginthreadex instead of CreateThread.
+
   Added a button to see the format of streams and sounds in wxPlayer.
 
   Rewrote the Resampler class to use DUMB's cubic interpolation
